--- a/Web/Views/Cancion/Index.cshtml
+++ b/Web/Views/Cancion/Index.cshtml
@@ -83,11 +83,11 @@
                                         <td class="text-center">
                                             @if (item.Estado)
                                             {
-                                                <h5><span class="right badge badge-success">Activo</span></h5>
+                                                <h5><span class="right badge badge-pill badge-success">Activo</span></h5>
                                             }
                                             else
                                             {
-                                                <h5><span class="right badge badge-danger">Inactivo</span></h5>
+                                                <h5><span class="right badge badge-pill badge-danger">Inactivo</span></h5>
                                             }
                                         </td>
                                         <td class="text-center ">
