--- a/Web/Views/Puesto/Create.cshtml
+++ b/Web/Views/Puesto/Create.cshtml
@@ -36,10 +36,9 @@
         </div>
 
         <div class="form-group row">
-            <strong class="text-danger">*</strong>
             @Html.LabelFor(model => model.IdCategoria, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-8">
-                @Html.DropDownList("IdCategoria", new SelectList(ViewBag.IdCategoria, "Id", "Descripcion"), htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.IdCategoria, new SelectList(ViewBag.Categoria, "Id", "Descripcion"), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
             </div>
         </div>
