--- a/Web/Views/Puesto/Edit.cshtml
+++ b/Web/Views/Puesto/Edit.cshtml
@@ -40,10 +40,10 @@
                     <div class="form-group row">
                         <strong class="text-danger">*</strong>
                         @Html.LabelFor(model => model.IdCategoria, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                           @Html.DropDownList("idcategoria", new SelectList(ViewBag.IdCategoria, "Id", "Descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
-                        </div>
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(model => model.IdCategoria, new SelectList(ViewBag.Categoria, "Id", "Descripcion"), htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.IdCategoria, "", new { @class = "text-danger" })
+                    </div>
                     </div>
 
                     <div class="form-group row">
