--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -23,20 +23,17 @@
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
                 <img src="~/Content/dist/img/avatar.png" class="user-image img-circle elevation-2" alt="User Image">
                 <span class="d-none d-md-inline">
-                    @{
-                        Infraestructure.Models.Usuario oUsuario1 = null;
-                        // Validar si vienen datos en la session
-                        if (Session["User"] != null)
-                        {
-                            // Casting
-                            oUsuario1 = Session["User"] as Infraestructure.Models.Usuario;
-                        }
+                    @{ Infraestructure.Models.Usuario oUsuario1 = null;
+                                    // Validar si vienen datos en la session
+                                    if (Session["User"] != null)
+                                    {
+                                        // Casting
+                                        oUsuario1 = Session["User"] as Infraestructure.Models.Usuario;
+                                    }
 
-                        if (oUsuario1 != null)
-                        {
-                            @oUsuario1.NombreCompleto
-                        }
-                    }
+                                    if (oUsuario1 != null)
+                                    {
+                        @oUsuario1.NombreCompleto } }
                 </span>
             </a>
             <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
@@ -47,12 +44,10 @@
                     {
                         if (UsuarioLogueado.Foto == null)
                         {
-                            <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">
-                        }
+        <img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image"> }
                         else
                         {
-                            <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(UsuarioLogueado.Foto)" class="img-circle elevation-2" alt="User Image">
-                        }
+        <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(UsuarioLogueado.Foto)" class="img-circle elevation-2" alt="User Image">}
                     }
 
 
@@ -60,18 +55,16 @@
 
                     <p>
 
-                        @{
-                            string rol = "";
-                            // Validar si vienen datos en la session
-                            if (Session["User"] != null)
-                            {
-                                if (oUsuario1 != null)
-                                {
-                                    rol = $"{oUsuario1.Rol.Descripcion}";
-                                }
-                            }
-                            @rol
-                        }
+                        @{ string rol = "";
+                                        // Validar si vienen datos en la session
+                                        if (Session["User"] != null)
+                                        {
+                                            if (oUsuario1 != null)
+                                            {
+                                                rol = $"{oUsuario1.Rol.Descripcion}";
+                                            }
+                                        }
+                            @rol }
                         <!--<small>Miembro desde 23 de Julio, 2021</small>-->
                     </p>
                 </li>
@@ -89,165 +82,16 @@
 </nav>
 <!-- /.navbar -->
 <!-- Main Sidebar Container -->
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="@Url.Action("Index","Home")" class="brand-link">
-        <img src="~/Content/dist/img/logo nazareno blanco.png" alt="logo" class="brand-image img-circle" style="opacity: .8">
-        <span class="brand-text font-weight-light"><b>NAZA </b>Musical Note</span>
-    </a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-
-
-
-        <!-- Sidebar Menu -->
-        <nav class="mt-4">
-            <ul class="nav nav-pills nav-sidebar flex-column open" data-widget="treeview" role="menu" data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
-                <li class="nav-item ">
-
-
-                    <a href="#" class="nav-link" id="mantenimientos">
-                        <i class="nav-icon fas fa-cogs"></i>
-                        <p>
-                            Mantenimientos
-                            <i class="fas fa-angle-left right"></i>
-
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a href="@Url.Action("Index","RolServicio")" class="nav-link" id="rolServicio">
-                                <i class="far fa-calendar-plus nav-icon"></i>
-                                <p>Rol de Servicio</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("Index","Cancion")" class="nav-link" id="menucancion">
-                                <i class="fas fa-file-audio nav-icon"></i>
-                                <p>Canciones</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("","")" class="nav-link" id="menucategorias">
-                                <i class="fas fa-clipboard-list nav-icon"></i>
-                                <p>Categorías</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="@Url.Action("Index","Puesto")" class="nav-link" id="menupuestos">
-                                <i class="fas fa-guitar nav-icon"></i>
-                                <p>Puestos</p>
-                            </a>
-                        </li>
-
-                    </ul>
-                </li>
-
-
-                <li class="nav-header">PROCESOS</li>
-                <li class="nav-item">
-                    <a href="@Url.Action("Index","Calendario")" class="nav-link">
-                        <i class="nav-icon far fa-calendar-alt"></i>
-                        <p>
-                            Gestión Agenda
-                        </p>
-                    </a>
-                </li>
-
-
-                <li class="nav-item">
-                    <a href="@Url.Action("Index","GestionCancion")" class="nav-link">
-                        <i class="nav-icon fa fa-music"></i>
-
-                        <p>
-                            Gestión Canciones
-                        </p>
-                    </a>
-                </li>
-
-
-
-                <li class="nav-header">REPORTES</li>
-                <li class="nav-item ">
-                    <a href="#" class="nav-link" id="informes">
-                        <i class="nav-icon fas fa-file-alt"></i>
-                        <p>
-                            Lista de informes
-                            <i class="fas fa-angle-left right"></i>
-
-                        </p>
-                    </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link pacientes">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Reporte de accesos</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Reporte de usuarios</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Reporte fechas de servicio</p>
-                            </a>
-                        </li>
-
-                    </ul>
-
-
-                </li>
-                <li class="nav-header">SEGURIDAD</li>
-                <li class="nav-item">
-                    <a href="@Url.Action("Index","Usuario")" class="nav-link" id="menuusuarios">
-                        <i class="nav-icon fas fa-users"></i>
-                        <p>
-                            Usuarios
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-database"></i>
-                        <p>
-                            Base de datos
-                        </p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="far fa-envelope nav-icon"></i>
-                        <p>Correo electrónico</p>
-                    </a>
-                </li>
-                <li class="nav-header">SUB-PROCESOS</li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-clock"></i>
-                        <p>
-                            Segundo plano
-                        </p>
-                    </a>
-                </li>
-
-            </ul>
-        </nav>
-        <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-</aside>
-
-
-
-@section scripts {
-
-
-
+@if (UsuarioLogueado.Rol.Id == 1)
+{
+    @Html.Partial("_MenuLider")
 }
+else
+{
+    @Html.Partial("_MenuIntegrante")
+}
+
+
+
+
