--- a/Web/Views/Usuario/Edit.cshtml
+++ b/Web/Views/Usuario/Edit.cshtml
@@ -24,89 +24,87 @@
 {
 @Html.AntiForgeryToken()
 
-                <div class="container">
-                    <div class="row justify-content-md-center">
-                        <div class="col-md-12">
-                            <hr />
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            @Html.HiddenFor(model => model.Id)
-                        </div>
+
+<div class="card card-default mt-3">
+    <div class="card-header text-danger border-bottom-0">
+        <p>* Campos requeridos</p>
+    </div>
+    <div class="card-body p-3 col-md-12">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Foto)
+        @Html.HiddenFor(model => model.Clave)
+        <div class="col-md-12 row">
+            <div class="col-md-6">
+
+                <div class="form-group">
+                    <strong class="text-danger">*</strong>
+                    @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.IdRol, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            @Html.DropDownListFor(m => m.IdRol, new SelectList(ViewBag.Rol, "Id", "Descripcion"), new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.IdRol, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    <strong class="text-danger">*</strong>
+                    @Html.LabelFor(model => model.Apellido_paterno, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Apellido_paterno, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Apellido_paterno, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        <strong class="text-danger">*</strong>
-                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Apellido_materno, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Apellido_materno, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Apellido_materno, "", new { @class = "text-danger" })
                     </div>
-
-                    <div class="form-group row">
-                        <strong class="text-danger">*</strong>
-                        @Html.LabelFor(model => model.Apellido_paterno, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Apellido_paterno, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Apellido_paterno, "", new { @class = "text-danger" })
-                        </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.IdRol, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownListFor(m => m.IdRol, new SelectList(ViewBag.Rol, "Id", "Descripcion"), new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.IdRol, "", new { @class = "text-danger" })
                     </div>
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.Apellido_materno, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Apellido_materno, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Apellido_materno, "", new { @class = "text-danger" })
-                        </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    <strong class="text-danger">*</strong>
+                    @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label" })
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
                     </div>
-
-                    <div class="form-group row">
-                        <strong class="text-danger">*</strong>
-                        @Html.LabelFor(model => model.Correo, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            @Html.EditorFor(model => model.Correo, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Correo, "", new { @class = "text-danger" })
-                        </div>
+                </div>
+                <div class="form-group">
+                    <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+                        @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
+                        <label class="custom-control-label" for="customSwitch3">Estado</label>
                     </div>
+                </div>
 
-      
-                    @Html.HiddenFor(model => model.Clave)
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.Estado, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-8">
-                            <div class="checkbox">
-                                @Html.EditorFor(model => model.Estado)
-                                @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group row" style="text-align:center">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Editar" class="btn btn-success" />
-                        </div>
-                    </div>
-                </div>}
-
-<div>
-    <a class="btn btn-warning" style="margin-bottom: 10px" href="@Url.Action("Index", "Usuario")" role="button"><i class="fas fa-arrow-alt-circle-up"></i>  Volver</a>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer justify-content-end">
+        <button type="submit" class="btn btn-success">Guardar</button>
+    </div>
 </div>
+
+
+ }
+
 @section scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script>
