--- a/Web/Views/Puesto/Create.cshtml
+++ b/Web/Views/Puesto/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Infraestructure.Models.Puesto
 
-@{ ViewBag.Title = "Create"; }
+@{ ViewBag.Title = "Nuevo Puesto"; }
 
 <!-- Content Header (Page header) -->
 <div class="content-header">
