--- a/Web/Views/Puesto/Edit.cshtml
+++ b/Web/Views/Puesto/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Infraestructure.Models.Puesto
 
-@{ ViewBag.Title = "Edit"; }
+@{ ViewBag.Title = "Editar Puesto"; }
 
 @{ string idValor = Convert.ToString(ViewBag.ElId);}
 
