--- a/Web/Views/Recuperacion/Index.cshtml
+++ b/Web/Views/Recuperacion/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    ViewBag.Title = "Recuperacion";
+    ViewBag.Title = "Recuperación Contraseña";
 }
 
 @using (Html.BeginForm("Send", "Recuperacion", FormMethod.Post, new { enctype = "multipart/form-data" }))
