--- a/Web/Views/Recuperacion/Recovery.cshtml
+++ b/Web/Views/Recuperacion/Recovery.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    ViewBag.Title = "Recovery";
+    ViewBag.Title = "Recuperación Contraseña";
 }
 
 @using (Html.BeginForm("RecoveryPass", "Recuperacion", FormMethod.Post, new { enctype = "multipart/form-data" }))
