--- a/Web/Views/RolServicio/Edit.cshtml
+++ b/Web/Views/RolServicio/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Infraestructure.Models.RolServicio
 @{
-    ViewBag.Title = "Editar";
+    ViewBag.Title = "Editar Rol de Servicio";
     List<Infraestructure.Models.Categoria> categorias = ViewBag.CategoriasPuestos;
 
     List<Infraestructure.Models.Puesto> puestos = ViewBag.Puestos;
