--- a/Web/Views/Shared/_MenuLider.cshtml
+++ b/Web/Views/Shared/_MenuLider.cshtml
@@ -40,8 +40,8 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("","")" class="nav-link" id="menucategorias">
-                                <i class="fas fa-clipboard-list nav-icon"></i>
+                            <a href="@Url.Action("Index","Categoria")" class="nav-link" id="menucategorias">
+                                <i class="fas fa-list-ul nav-icon"></i>
                                 <p>Categorías</p>
                             </a>
                         </li>
