--- a/Web/Views/Usuario/Details.cshtml
+++ b/Web/Views/Usuario/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Infraestructure.Models.Usuario
 
-@{ ViewBag.Title = "Details"; }
+@{ ViewBag.Title = "Detalles Usuario"; }
 
 @{ Infraestructure.Models.Usuario UsuarioLogueado = (Infraestructure.Models.Usuario)Session["User"]; }
 
