--- a/Web/Views/Usuario/Edit.cshtml
+++ b/Web/Views/Usuario/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Infraestructure.Models.Usuario
 
-@{ ViewBag.Title = "Edit"; }
+@{ ViewBag.Title = "Editar Usuario"; }
 
 <!-- Content Header (Page header) -->
 <div class="content-header">
