--- a/Web/Views/Login/Index.cshtml
+++ b/Web/Views/Login/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Inicio de sesión";
 }
 
 @using (Html.BeginForm("Login", "Login", FormMethod.Post, new { enctype = "multipart/form-data" }))
