--- a/Web/Views/Puesto/Details.cshtml
+++ b/Web/Views/Puesto/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Infraestructure.Models.Puesto
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles Puesto";
 }
 
 @{ Infraestructure.Models.Usuario UsuarioLogueado = (Infraestructure.Models.Usuario)Session["User"]; }
