--- a/Web/Views/Puesto/Index.cshtml
+++ b/Web/Views/Puesto/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Infraestructure.Models.Puesto>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Puestos";
 
 }
 @section Styles{
