--- a/Web/Views/RolServicio/Details.cshtml
+++ b/Web/Views/RolServicio/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Infraestructure.Models.RolServicio
 
 @{
-    ViewBag.Title = "Detalles";
+    ViewBag.Title = "Detalles Rol de Servicio";
 }
 
 
