--- a/Web/Views/Usuario/Create.cshtml
+++ b/Web/Views/Usuario/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Infraestructure.Models.Usuario
 
-@{ ViewBag.Title = "Create"; }
+@{ ViewBag.Title = "Nuevo Usuario"; }
 
 <!-- Content Header (Page header) -->
 <div class="content-header">
