--- a/Web/Views/Puesto/Index.cshtml
+++ b/Web/Views/Puesto/Index.cshtml
@@ -61,7 +61,7 @@
                                         @Html.DisplayNameFor(model => model.Descripcion)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.Categoria.Descripcion)
+                                        @Html.DisplayName("Categoría")
                                     </th>
                                     <th class="notexport" style="text-align:center"></th>
                                 </tr>
