--- a/Web/Views/Usuario/ChangePassNewUser.cshtml
+++ b/Web/Views/Usuario/ChangePassNewUser.cshtml
@@ -62,7 +62,7 @@
                                 @if (TempData["Message"] != null)
                                 {
                                     string mensaje = @"<div class='alert alert-danger al-dismissertible' role='alert' ><button type='button' class='close' data-dismiss='alert' aria-label='Close'>
-                                                                                                                                                                                                             </button><strong></strong> " + TempData["Message"] + " </div>";
+                                                                                                                                                                                                                             </button><strong></strong> " + TempData["Message"] + " </div>";
                                     @Html.Raw(mensaje);
                                 }
                             </div>
@@ -78,3 +78,5 @@
     </body>
 </html>
 }
+
+    @Scripts.Render("~/bundles/jqueryval")
